[package]
name = "wrapped2d"
version = "0.4.0"
authors = ["Thomas Koehler <basta.t.k+git@gmail.com>"]

description = "Rust binding for Box2D"
documentation = "https://bastacyclop.github.io/rust_box2d/wrapped2d/"
repository = "https://github.com/Bastacyclop/rust_box2d.git"
readme = "README.md"
keywords = ["physics", "binding", "bindings", "box2d"]
license = "zlib-acknowledgement"

build = "build.rs"

exclude = [
    "Box2D/Contributions/*",
    "Box2D/Box2D/Build/*",
    "Box2D/Box2D/Documentation/*",
    "Box2D/Box2D/glew/*",
    "Box2D/Box2D/glfw/*",
    "Box2D/Box2D/HelloWorld/*",
    "Box2D/Box2D/Testbed/*",
]

[features]
serialize = ["serde", "serde_derive"]
default = []

[build-dependencies]
cc = "^1.0"
cmake = "^0.1"

[dependencies]
libc = "^0.2"
vec_map = "^0.8"
bitflags = "^1.2.1"
serde = { version = "^1.0", optional = true }
serde_derive = { version = "^1.0", optional = true }
cgmath = { version = "^0.14", optional = true }
nalgebra = { version = "^0.10", optional = true }

[dev-dependencies]
approx = "^0.1"
